crates/secretenv-core/tests/ui/public_api/flat_api_reexports.stderr
error[E0432]: unresolved imports `secretenv_core::api::FileEncArtifact`, `secretenv_core::api::SecretEnvHome`
 --> tests/ui/public_api/flat_api_reexports.rs:1:27
  |
1 | use secretenv_core::api::{FileEncArtifact, SecretEnvHome};
  |                           ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^ no `SecretEnvHome` in `api`
  |                           |
  |                           no `FileEncArtifact` in `api`
  |
  = help: consider importing this struct instead:
          secretenv_core::prelude::FileEncArtifact
  = help: consider importing this struct instead:
          secretenv_core::prelude::SecretEnvHome
